# cms-data

./: .gitignore  README.md  datasets.toml  pyproject.toml
data/MS-LTC-DRG/: 2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
process/icd10cm/: 2023.py  validation.py
process/icd10pcs/: 2023.py  validation.py
process/msltcdrg/: 2016.py  2017.py  2018.py  2019.py  2020.py  2021.py  2022.py  2023.py  validation.py
raw/MS-LTC-DRG/: CMS-1655-CN2 Table 11.txt  CMS-1677-CN Table 11.txt  CMS-1694-CN Table 11.txt  CMS-1716-F Table 11.txt  CMS-1735-F Table 11.txt  CMS-1752-F Table 11.txt  CMS-1771-F Table 11.txt  FY 2016 Table 11 (CMS-1632-CN).txt
