[tool.poetry]
name = "cms-data"
version = "0.1.0"
description = ""
authors = ["JonathanGupton <Jonathan.Gupton@gmail.com>"]
readme = "README.md"
packages = [{include = "cms_data"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
black = "^22.8.0"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
